--- a/disc/css/style.css
+++ b/disc/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhai');
 * {
     box-sizing: border-box;
     outline: none;
@@ -6,10 +7,16 @@ body, img {
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: sans-serif;
 }
 :root {
     --tema: #2D3391;
     --gap: 30px;
+    --font: 'Baloo Bhai', cursive;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font);
+    font-weight: normal;
 }
 header {
     display: block;
@@ -34,11 +41,135 @@ footer {
     display: block;
     width: 100%;
     text-align: center;
-    padding: 12px 0;
+    padding: 18px 0;
+    font-size: 11px;
 }
 nav {
     display: block;
     width: 100%;
     max-width: 100vw;
     height: 150px;
+}
+.container {
+    display: grid;
+    width: 960px;
+    margin: 0 auto;
+}
+.grid-1 { display: grid; grid-template-columns: repeat(1, 1fr); grid-gap: 30px;}
+.grid-2 { display: grid; grid-template-columns: repeat(2, 1fr); grid-gap: 30px; }
+.grid-3 { display: grid; grid-template-columns: repeat(3, 1fr); grid-gap: 30px; }
+.grid-4 { display: grid; grid-template-columns: repeat(4, 1fr); grid-gap: 30px; }
+.grid-5 { display: grid; grid-template-columns: repeat(5, 1fr); grid-gap: 30px; }
+.grid-6 { display: grid; grid-template-columns: repeat(6, 1fr); grid-gap: 30px; }
+.grid-7 { display: grid; grid-template-columns: repeat(7, 1fr); grid-gap: 30px; }
+.grid-8 { display: grid; grid-template-columns: repeat(8, 1fr); grid-gap: 30px; }
+.grid-9 { display: grid; grid-template-columns: repeat(9, 1fr); grid-gap: 30px; }
+.grid-10 { display: grid; grid-template-columns: repeat(10, 1fr); grid-gap: 30px; }
+.grid-11 { display: grid; grid-template-columns: repeat(11, 1fr); grid-gap: 30px; }
+.grid-12 { display: grid; grid-template-columns: repeat(12, 1fr); grid-gap: 30px; }
+
+main section {}
+main section form label {
+    display: block;
+    color: #777;
+}
+main section input,
+main section select,
+main section textarea {
+    display: block;
+    border: 1px solid #FFF;
+    margin-bottom: 20px;
+    min-height: 40px;
+    border-bottom: 2px solid #CCC;
+    width: 100%;
+    font-weight: bold;
+    color: #333;
+}
+main section input:focus,
+main section select:focus,
+main section textarea:focus {
+    border-bottom: 2px solid var(--tema);
+}
+main section input[type=submit] {
+    background: var(--tema);
+    border: none;
+    border-radius: 5px;
+    font-weight: normal;
+    font-family: var(--font);
+    width: auto;
+    display: inline-block;
+    padding: 0 20px;
+    cursor: pointer;
+    color: #FFF;
+    filter: contrast(.9);
+}
+main section input[type=submit]:hover {
+    filter: contrast(1);
+}
+[hidden] { display: none !important; }
+footer input {
+    display: block;
+    border: 1px solid var(--tema);
+    margin-bottom: 20px;
+    min-height: 40px;
+    border-bottom: 2px solid rgba(255, 255, 255, .5);
+    width: 100%;
+    font-weight: bold;
+    color: #FFF;
+    background-color: transparent;
+}
+footer input:focus {
+    border-bottom: 2px solid #FFF
+}
+footer input[type=submit] {
+    background: var(--tema);
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 5px;
+    font-weight: normal;
+    font-family: var(--font);
+    width: auto;
+    display: inline-block;
+    padding: 0 20px;
+    cursor: pointer;
+    color: #FFF;
+    filter: contrast(.9);
+}
+footer input[type=submit]:hover {
+    filter: contrast(1);
+}
+footer a {
+    color: #FFF;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+}
+.busca {
+    display: grid;
+    grid-template-columns: 1fr 40px;
+    grid-gap: 16px;
+    border: 1px solid #777;
+    border-radius: 40px;
+    height: 40px;
+}
+.busca input[type="text"] {
+    border-radius: 40px;
+    border: 1px solid #FFF;
+    height: 37px;
+    width: 100%;
+    padding-left: 12px;
+    font-weight: bold;
+}
+.busca img {
+    display: block;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    padding: 7px;
+}
+.grid-header {
+    display: grid;
+    grid-template-columns: 150px 1fr 250px;
+    grid-gap: 20px;
+    align-items: center;
 }
